<?php


abstract class Distinguishable
{

}