<?php


class Button extends Widget
{
    public function draw()
    {
        echo "<button type="."\"button\"".">Click Me!</button>";
    }
}