<?php


class Link extends Widget
{
    public function draw()
    {
        // TODO: Implement draw() method.
    }
}