<?php


abstract class Widget
{
    abstract public function draw();
}